log
Thu 24 Aug 2023 02:54:12 PM UTC: 
 list.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:56:16: error: ‘List’ {aka ‘struct List’} has no member named ‘actual’
   56 |     while (list->actual!=NULL){
      |                ^~
Compilation failed
239a3f1
Thu 24 Aug 2023 04:14:10 PM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:54:9: error: unused variable ‘actual’ [-Werror=unused-variable]
   54 |   Node *actual=list->head;
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
61980ae
Thu 24 Aug 2023 04:14:32 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
62a2f3a
Thu 24 Aug 2023 04:18:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
de6998a
Thu 24 Aug 2023 04:21:10 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
d1d0c5a
Thu 24 Aug 2023 04:21:51 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:9: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   48 |     list->prev = list->current;
      |         ^~
Compilation failed
88ff615
Thu 24 Aug 2023 04:23:37 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
63895c9
